--- a/future/templates/modules/home/css/touch.css
+++ b/future/templates/modules/home/css/touch.css
@@ -53,6 +53,6 @@ h1.roomfornew {
 	clear: both;
 }
 form {
-	margin: 0 0 -7px 0;
+	margin: 0 0 -0.5em 0;
 }
 
